  such as Eclipse to browse the Ice source code and to display javadoc
  comments.

- Fixed a bug that caused UnmarshalOutOfBoundsException during an
  attempt to unmarshal an exception or class if Ice.jar is installed
  in the JVM's extension directory.

- The following APIs are deprecated and will be removed in a future 
  release.

  Object::ice_hash()
  ObjectPrx::ice_getHash()

- The StackSize thread pool configuration property is now used.

- The generated classes for Slice structs are no longer declared final.

- Ice.Util.generateUUID has been deprecated. Use
  java.util.UUID.randomUUID().toString() instead.

- Ice now supports the ability to load a configuration file as a class
  path resource. For a path name specified in the ICE_CONFIG
  environment variable, in the --Ice.Config command-line option, or
  passed to Properties::load(), Ice first attempts to open the file as
  a class path resource and, if that fails, tries to open it as a file
  in the local file system. See the manual for more information.

- A configuration file can now be loaded as a class path resource.
  
- Removed the Java2 mapping. The release notes contain instructions
  for migrating an application to the Java5 mapping.

- Changed the Slice compiler to emit @SuppressWarning annotations only
  when necessary.

- Fixed a discrepancy between the documented behavior of the property
  IceSSL.CheckCertName and its actual behavior. The documented
  behavior states that IceSSL compares the host name as it appears in
  the proxy's endpoint against the server certificate's alternative
  subject names. The actual behavior in Ice 3.3.0 differed slightly
  in that the host name may have undergone a translation that could
  result in IceSSL using a different host name than that of the proxy.
  For example, the proxy may have contained "127.0.0.1" but IceSSL
  used "localhost". This could cause the SSL connection attempt to
  fail if IceSSL.CheckCertName is enabled. IceSSL now uses the host